# derpy

./: CMakeLists.txt
doc/: coordintes.txt
examples/g_src/: .enabler.h.swp
examples/gb/: Makefile  game  main.cpp
examples/gb/engine/: Makefile  gamebase.cpp  gamebase.h  gameclock.cpp  gameclock.h  gameinputbase.h
examples/posta/: Character.c  Character.h  Inventory.h  Makefile  Material.cpp  Material.h  Object.cpp  Object.h  main.c
examples/posta/data/: Materials.lst  Objects.lst  main.lua
examples/posta/scripts/: build_bindings.sh  prefix.lua
scripts/: clang-format-config  format_code.sh
src/: BatchRenderer.cpp  BatchRenderer.h  CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Platform.h  Program.cpp  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  main.cpp  stb_image.h
src/engine/: Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  Light.cpp  Light.h  Logging.cpp  Logging.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Noncopyable.h  Platform.h  Program.cpp  Program.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Uniform.cpp  Uniform.h  VBO.cpp  VBO.h
src/engine/map/: Layer.cpp  Layer.h  Map.cpp  Map.h  MapObject.cpp  MapObject.h  ObjectGroup.cpp  ObjectGroup.h  Tileset.cpp  Tileset.h
src/engine/techniques/: DynamicLighting.cpp  DynamicLighting.h  RenderToTexture.cpp  RenderToTexture.h
src/engine/util/: Tokenizer.cpp  Tokenizer.h
src/tests/: CMakeLists.txt
src/tests/data/map/: untitled.tmx
src/tests/dynamic_map/: CMakeLists.txt  TankMap.cpp  TankMap.h  main.cpp  server.cpp
src/tests/map_parse/: main.cpp
src/tests/map_physics/: main.cpp
src/tests/opengl_basic/: main.cpp
src/tests/opengl_lighting/: main.cpp
src/tests/opengl_rendertotexture/: main.cpp
src/tests/tank_game/: CMakeLists.txt
src/tests/tank_game/client/: client.cpp
src/tests/tank_game/common/: Api.h  Network.cpp  Network.h
src/tests/tank_game/server/: ClientConnection.h  GameSession.cpp  GameSession.h  Session.cpp  Session.h  server.cpp  server.cpp.orig
